# Embedded_library

./: CMakeLists.txt  STM32_Printf.c
4_Digit_Display/: 4_Digit_Display.c  4_Digit_Display.h
AS608/: AS608.c  AS608.h  stm32f1xx_it.c
DHT11/: DHT11.c  DHT11.h
I2C/: myiic.c  myiic.h
LCD/LCD/: lcd.c  lcd.h
LCD/TEXT/: text.c  text.h
LCD/W25QXX/: w25qxx.c
MLX90614/: MLX90614.c  MLX90614.h
Mahony/: Mahony.c  Mahony.h
Mpu6050/: mpu6050.c  mpu6050.h  myiic.c  myiic.h
NRf24L01/: NRf24L01.c  NRf24L01.h
OLED_4P_I2C/: codetab.h  myiic.c  myiic.h  oled.c  oled.h
Ultrasound/: Ultrasound.c  Ultrasound.h
spi/: spi.c  spi.h
